[package]
name = "halo2-keccak256"
version = "0.1.0"
edition = "2021"

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]

[dependencies]
ff = "0.13.0"
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_04_20"}
plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }

[dev-dependencies]
ark-std = "0.4.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

[patch.crates-io]
halo2curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves.git" }