[package]
name = "halo2-keccak256"
version = "0.1.0"
edition = "2021"

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]

[dependencies]
ff = "0.13.0"
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git" }
plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }

[dev-dependencies]
ark-std = { version = "0.4.0", features = ["print-trace"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

[patch."https://github.com/privacy-scaling-explorations/halo2"]
halo2_proofs = { git = "https://github.com/shuklaayush/halo2.git", branch = "feat/layouter-query-instance" }
