[package]
name = "halo2-keccak256"
version = "0.1.0"
edition = "2021"

[features]
default = ["pse-backend"]
pse-backend = ["halo2_proofs_pse"]
zcash-backend = ["halo2_proofs_zcash"]
dev-graph = ["halo2_proofs_pse/dev-graph", "plotters"]

[dependencies]
ff = "0.13.0"
plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }

halo2_proofs_pse = { package = "halo2_proofs", git = "https://github.com/privacy-scaling-explorations/halo2.git", optional = true }
halo2_proofs_zcash = { package = "halo2_proofs", git = "https://github.com/zcash/halo2.git", optional = true }

[dev-dependencies]
ark-std = { version = "0.4.0", features = ["print-trace"] }
halo2curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves.git" }
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

# [patch."https://github.com/privacy-scaling-explorations/halo2"]
# halo2_proofs_pse = { package = "halo2_proofs", path = "../halo2/halo2_proofs" }
